家族情報全置換APIを削除
